--- a/coutndown/index.html
+++ b/coutndown/index.html
@@ -9,7 +9,7 @@
   <div class="container">
 
   <h1 class="tt">
-    VIT Sucks
+    Vit Chennai 
   </h1>
   <div class="up">
 
@@ -39,7 +39,7 @@
 </div>
 </div>
   <script type="text/javascript">
-    var fdate=new Date("Nov 24, 2022 00:00:00").getTime();
+    var fdate=new Date("July 24, 2023 00:00:00").getTime();
     var x=setInterval(function(){
       var now= new Date().getTime();
       var distance=fdate-now;
